<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnviarSMS-Email</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="fondo">#000000</color>
    <color name="texto">#eeeeee</color>

    <string name="titulo">Enviar SMS-Email</string>
    <string name="btnTexto">Mensaje de texto</string>
    <string name="btnMail">E-Mail</string>
    <string name="title_activity_smstexto">SMSTexto</string>
    <string name="tituloTexto">Mensaje de texto</string>
    <string name="destino">Para:</string>
    <string name="mensaje">Mensaje:</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_smsdata">SMSData</string>
    <string name="tituloMail">E-Mail</string>
    <string name="asunto">Asunto:</string>
    <string name="cBox">Adjuntar imagen</string>
    <string name="rbImagen">Adjuntar imagen</string>
    <string name="rbZip">Adjuntar zip</string>

</resources>
