<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EMail" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margenRight"
        android:background="@color/fondo"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".EMail" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tituloMail"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/texto" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTopBig"
            android:text="@string/destino"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/texto" />

        <EditText
            android:id="@+id/mailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/texto"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTopBig"
            android:text="@string/asunto"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/texto" />

        <EditText
            android:id="@+id/asunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTop"
            android:background="@color/texto"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenTopBig"
                android:text="@string/mensaje"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/texto" />

            <EditText
                android:id="@+id/cuerpo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenTop"
                android:background="@color/texto"
                android:ems="10"
                android:inputType="textMultiLine"
                android:minLines="7" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.59"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rbImagen"
                    android:textColor="@color/texto" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rbZip"
                    android:textColor="@color/texto" />
            </RadioGroup>

            <Button
                android:id="@+id/btnEnviarMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="@dimen/margenTopBig"
                android:onClick="enviar"
                android:text="@string/enviar"
                android:textColor="@color/fondo" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>