<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/texto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margenTopBig"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btnTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:onClick="enviarSms"
            android:text="@string/btnTexto"
            android:textColor="@color/fondo" />

        <Button
            android:id="@+id/btnMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:onClick="enviarEmail"
            android:text="@string/btnMail"
            android:textColor="@color/fondo" />

    </LinearLayout>

</LinearLayout>
