<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SMSTexto" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tituloTexto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/texto" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenTopBig"
        android:text="@string/destino"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/texto" />

    <EditText
        android:id="@+id/destino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenTop"
        android:background="@color/texto"
        android:ems="10"
        android:inputType="phone"
        android:lines="1" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTopBig"
            android:text="@string/mensaje"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/texto" />

        <EditText
            android:id="@+id/mensaje"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margenTop"
            android:layout_weight="0.57"
            android:background="@color/texto"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margenTopBig"
            android:onClick="enviar"
            android:text="@string/enviar"
            android:textColor="@color/fondo" />

    </LinearLayout>

</LinearLayout>